tests/errors/err_too_many_args.mix
// ERROR: expects 2 argument(s), got 3
add(a: int, b: int) -> int
    a + b

main()
    print(add(1, 2, 3))
